--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.1'
 services:
   PostgreSQL:
-    container_name: PostgreTestClock
-    image: postgres:12-alpine
+    container_name: PostgresFrmFeedback
+    image: postgres:11-alpine
     ports:
       - '5432:5432'
-    enviroment:
+    environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=toor
       - POSTGRES_DB=frmfeedback
